  * Remove obsolete reference to kernel-img.conf

  [ Colin Watson ]
  * Fix "/etc/init.d/dhcpd3-server" typo (should be
    /etc/init.d/dhcp3-server), and unfuzzy all translations (LP: #666726).

  [ Joey Hess ]
  * Updated USB stick documentation to describe the much simpler, more
    flexible, and likely more robust use of isohybrid images. All i386
    and amd64 ISO images are now isohybrid.

 -- Samuel Thibault <sthibault@debian.org>  Mon, 06 Sep 2010 00:56:02 +0200

installation-guide (20100518) unstable; urgency=low

  [ Colin Watson ]
  * Note that partman-auto/init_automatically_partition is only honoured if
    partman-auto/method is not set.
  * Document the use of grub-installer/grub2_instead_of_grub_legacy to
    switch back to GRUB Legacy for those who need it.
  * Remove spurious quoting in network-console documentation, pointed out by
    Jonathan Amery.
  * partman now asks a slightly different (and less scary) confirmation
    question if it doesn't appear that any data is being overwritten.
    Document the associated preseeding changes.

  [ Frans Pop ]
  * Add missing hyphen in command "kbd-config". With thanks to Tapio Lehtonen.
    Closes: #545584.
  * Include a caution in the IA64 version of the manual against using IA64
    for "normal" 64-bit Intel systems.
  * Disable the variant for the alpha architecture: it is being dropped as a
    release architecture for Squeeze.
  * When updating PO files, set them to a standard width of 79 (same as used
    for l10n-sync for D-I master PO files).
  * Document that Debian now installs Recommends by default and how to disable
    that.
  * x86 USB boot: two improvements suggested by Timo Juhani Lindfors and one
    by Samuel Thibault. Closes: #532437, #532440, #548534.
  * welcome: add a link to www.kernel.org and remove the no longer valid link
    to www.kerneltraffic.org. Closes: #331523.
  * Document new help functionality.