@@ -1436,11 +1436,6 @@ to be used easily on the kernel command line as well.
 <phrase arch="kfreebsd-any;hurd-any"># To install no bootloader, uncomment this
 #d-i grub-installer/skip boolean true</phrase>
 
-# With a few exceptions for unusual partitioning setups, GRUB 2 is now the
-# default. If you need GRUB Legacy for some particular reason, then
-# uncomment this:
-#d-i grub-installer/grub2_instead_of_grub_legacy boolean false
-
 # This is fairly safe to set, it makes grub install automatically to the MBR
 # if no other operating system is detected on the machine.
 d-i grub-installer/only_debian boolean true
