@@ -72,6 +72,8 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * Updated USB stick documentation to describe the much simpler, more
     flexible, and likely more robust use of isohybrid images. All i386
     and amd64 ISO images are now isohybrid.
+  * Remove documentation of no longer supported
+    grub-installer/grub2_instead_of_grub_legacy preseed. Closes: #610739
 
  -- Samuel Thibault <sthibault@debian.org>  Mon, 06 Sep 2010 00:56:02 +0200
 
